syntax = "proto3";

option go_package = "github.com/Cacsjep/acapgrpcclient/cctv";

service CCTVService {
  rpc StreamVideo(stream FrameMessage) returns (stream Acknowledgement);
}

message FrameMessage {
  bytes frame = 1;
  int32 height = 2;
  int32 width = 3;
  int32 sequence_nbr = 4;
  int32 framerate = 5;
}

message Acknowledgement {
  string message = 1;
}